samples/_failures_safe/1761642972_077efa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c284ff5.c: In function ‘main’:
./samples/SAFE/__tmp_2c284ff5.c:128:12: error: expected declaration or statement at end of input
  128 |     struct Token token;
      |            ^~~~~
